--- a/tipovacka-app/src/index.html
+++ b/tipovacka-app/src/index.html
@@ -8,7 +8,7 @@
     content="width=device-width, initial-scale=1"
     name="viewport">
   <link
-    href="favicon.ico"
+    href="assets/icons/favicon.ico"
     rel="icon"
     type="image/x-icon">
   <link
@@ -21,8 +21,19 @@
     href="https://fonts.googleapis.com/icon?family=Material+Icons"
     rel="stylesheet">
   <link
-    href="assets/icons/icon-180x180.png"
-    rel="apple-touch-icon">
+    href="assets/icons/apple-touch-icon.png"
+    rel="apple-touch-icon"
+    sizes="180x180">
+  <link
+    href="assets/icons/favicon-32x32.png"
+    rel="icon"
+    sizes="32x32"
+    type="image/png">
+  <link
+    href="assets/icons/favicon-16x16.png"
+    rel="icon"
+    sizes="16x16"
+    type="image/png">
 </head>
 <body>
 <app-root></app-root>
